--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Babel==2.10.1
 backcall==0.2.0
 beautifulsoup4==4.10.0
 bleach==4.1.0
+bokeh==2.4.2
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -20,7 +21,11 @@ decorator==5.1.1
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2.13
+django-crontab==0.7.1
 django-environ==0.8.1
+django-extensions==3.1.3
+django-htmx==1.6.0
+django-widget-tweaks==1.4.9
 entrypoints==0.4
 executing==0.8.3
 Flask==2.1.2
