--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
-Django==3.2.13
 asgiref==3.4.1
 autopep8==1.6.0
 dj-database-url==0.5.0
+Django==3.2.13
+django-environ==0.8.1
 gunicorn==20.1.0
+numpy==1.23.2
+pandas==1.4.3
 pycodestyle==2.8.0
+python-dateutil==2.8.2
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 whitenoise==5.3.0
-django-environ==0.8.1
+wincertstore==0.2
+wordcloud==1.8.2.2
+wordtree==0.1.0
+wsproto==1.1.0
+zipp==3.8.0
+zope.interface==5.4.0
